style.css
/* Generated by Font Squirrel (http://www.fontsquirrel.com) on March 2, 2012 06:05:09 PM America/New_York */
@font-face {
    font-family: 'forque';
    src: url('fonts/Forque-webfont.eot');
    src: url('fonts/Forque-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/Forque-webfont.woff') format('woff'),
         url('fonts/Forque-webfont.ttf') format('truetype'),
         url('fonts/Forque-webfont.svg#firsttestRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

html { position: relative; height: 100%; width: 100%; padding: 0px; margin: 0px; } 
body { padding: 0px; margin: 0px; font-size: 24px; font-family: forque, sans-serif; color: #eee; }
body { background-attachment: fixed;
		background-image: linear-gradient(bottom, rgb(46,46,46) 0%, rgb(140,140,137) 100%);
		background-image: -o-linear-gradient(bottom, rgb(46,46,46) 0%, rgb(140,140,137) 100%);
		background-image: -moz-linear-gradient(bottom, rgb(46,46,46) 0%, rgb(140,140,137) 100%);
		background-image: -webkit-linear-gradient(bottom, rgb(46,46,46) 0%, rgb(140,140,137) 100%);
		background-image: -ms-linear-gradient(bottom, rgb(46,46,46) 0%, rgb(140,140,137) 100%);
		background-image: -webkit-gradient(
			linear,
			left bottom,
			left top,
			color-stop(0, rgb(46,46,46)),
			color-stop(1, rgb(140,140,137))
		);
}
h1 { padding: 10px; text-align: center; font-size: 72px; color: rgba(255,255,255,.6); text-shadow: 1px 4px 6px #333; }
h2 { margin: 5px 0px; text-shadow: 2px 2px 2px rgba(50,50,50,.3); }
fieldset { margin: 0px; padding: 0px; overflow: hidden; border: none; padding: 0px 10px 10px; text-shadow: 2px 2px 2px #444; }
legend { background-color: #eee; color: #666; padding: 5px; width: 100%; text-shadow: 2px 2px 2px #999; cursor: pointer; }
.on legend:before { content: "▼ "; }
.off legend:before { content: "▶ "; }
.on label { display: block; overflow: hidden; }
.off label { display: none; }
input { float: left; margin-top: 15px; font-size: 40px; }

.forkme { display: block; position: absolute; top: 0; right: 0; border: 0; }
.criteria { width: 450px; margin: 10px; float: left; overflow: hidden; }
.engines { padding-top: 5px; overflow: hidden; }
.engines div { background-color: #f80; padding: 10px; margin: 5px; float: left; text-align: center; }
.engines a,
.engines span { font-family: helvetica, arial, sans-serif; color: #ccc; font-size: 16px; }
.engines span { font-size: 14px; color: #666; }
.engines a:hover { color: #fff; }
.remove { -webkit-animation: laterz 1s 0s 1 forwards; -moz-animation: laterz 1s 0s 1 forwards; -o-animation: laterz 1s 0s 1 forwards; }
.add { -webkit-animation: helloz 1s 0s 1 forwards; -moz-animation: helloz 1s 0s 1 forwards; -o-animation: helloz 1s 0s 1 forwards; }

@-webkit-keyframes laterz {
	from { opacity: 1; }
	to { opacity: 0; }
}
@-webkit-keyframes helloz {
	from { opacity: 0; }
	to { opacity: 1; }
}
@-o-keyframes laterz {
	from { opacity: 1; }
	to { opacity: 0; }
}
@-o-keyframes helloz {
	from { opacity: 0; }
	to { opacity: 1; }
}
@-moz-keyframes laterz {
	from { opacity: 1; }
	to { opacity: 0; }
}
@-moz-keyframes helloz {
	from { opacity: 0; }
	to { opacity: 1; }
}

